Fixed Blur Effect on Header

--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img id="logo1" src="assets/img/logo.png" alt="">
-        <h1 class="sitename">VSS<span>Housing</span></h1>
+        <img id="logo1" src="assets/img/logo.png" alt=""> 
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -57,8 +56,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="properties.html">Properties</a></li>
-          <li><a href="directors.html">Directors</a></li>
+          <li><a href="projects.html">Projects</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -209,8 +207,8 @@
           <div>
             <h4>Contact</h4>
             <p>
-              <strong>Phone:</strong> <span>+91 9935531136</span><br>
-              <strong>Email:</strong> <span>info@example.com</span><br>
+              <strong>Phone:</strong> <span>+91-9935531136</span><br>
+              <strong>Email:</strong> <span>vsshousinggroup@yahoo.com</span><br>
             </p>
           </div>
         </div>
@@ -220,19 +218,21 @@
           <div>
             <h4>Opening Hours</h4>
             <p>
-              <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
+              <strong>Mon-Sat:</strong> <span>10AM - 06PM</span><br>
               <strong>Sunday</strong>: <span>Closed</span>
             </p>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6">
-          <h4>Follow Us</h4>
-          <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-person-add icon"></i>
+          <div>
+            <h4>Follow Us</h4>
+            <div class="social-links d-flex">
+              <a href="https://www.facebook.com/share/15ptxfmaSd/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/vsshousinggroup?igsh=am5wczAxaW5weHJ6&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/vss-housing-private-limited/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            </div>
           </div>
         </div>
 
