--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Properties - VSS Housing (P) Ltd.</title>
+  <title>Projects - VSS Housing (P) Ltd.</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -41,15 +41,14 @@
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
-<body class="properties-page">
+<body class="projects-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="">
-        <h1 class="sitename">VSS<span>Housing</span></h1>
+        <img id="logo1" src="assets/img/logo.png" alt=""> 
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -57,8 +56,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="properties.html" class="active">Properties</a></li>
-          <li><a href="directors.html">Directors</a></li>
+          <li><a href="projects.html" class="active">Projects</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -92,20 +90,21 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Properties</h1>
+              <h1>Projects</h1>
               <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
             </div>
           </div>
         </div>
       </div>
-      <nav class="breadcrumbs">
-        <div class="container">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Properties</li>
-          </ol>
-        </div>
-      </nav>
+<nav class="nav nav-pills">
+  <div class="container d-flex justify-content-center">
+    <a class="nav-link active text-center flex-fill mx-1" href="#" data-filter="all">All</a>
+    <a class="nav-link text-center flex-fill mx-1" href="#" data-filter="ongoing">Ongoing</a>
+    <a class="nav-link text-center flex-fill mx-1" href="#" data-filter="completed">Completed</a>
+  </div>
+</nav>
+
+
     </div><!-- End Page Title -->
 
     <!-- Real Estate Section -->
@@ -115,7 +114,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img src="assets/img/properties/property-1.jpg" alt="" class="img-fluid">
               <div class="card-body">
@@ -139,7 +138,7 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <img src="assets/img/properties/property-2.jpg" alt="" class="img-fluid">
               <div class="card-body">
@@ -163,7 +162,7 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/properties/property-3.jpg" alt="" class="img-fluid">
               <div class="card-body">
@@ -187,7 +186,7 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="400">
             <div class="card">
               <img src="assets/img/properties/property-4.jpg" alt="" class="img-fluid">
               <div class="card-body">
@@ -211,7 +210,7 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="500">
             <div class="card">
               <img src="assets/img/properties/property-5.jpg" alt="" class="img-fluid">
               <div class="card-body">
@@ -235,7 +234,7 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="600">
             <div class="card">
               <img src="assets/img/properties/property-6.jpg" alt="" class="img-fluid">
               <div class="card-body">
@@ -287,8 +286,8 @@
           <div>
             <h4>Contact</h4>
             <p>
-              <strong>Phone:</strong> <span>+91 9935531136</span><br>
-              <strong>Email:</strong> <span>info@example.com</span><br>
+              <strong>Phone:</strong> <span>+91-9935531136</span><br>
+              <strong>Email:</strong> <span>vsshousinggroup@yahoo.com</span><br>
             </p>
           </div>
         </div>
@@ -298,19 +297,21 @@
           <div>
             <h4>Opening Hours</h4>
             <p>
-              <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
+              <strong>Mon-Sat:</strong> <span>10AM - 06PM</span><br>
               <strong>Sunday</strong>: <span>Closed</span>
             </p>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6">
-          <h4>Follow Us</h4>
-          <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-person-add icon"></i>
+          <div>
+            <h4>Follow Us</h4>
+            <div class="social-links d-flex">
+              <a href="https://www.facebook.com/share/15ptxfmaSd/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/vsshousinggroup?igsh=am5wczAxaW5weHJ6&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/vss-housing-private-limited/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            </div>
           </div>
         </div>
 
@@ -345,7 +346,5 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
