--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
 
           <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/properties/property-1.jpg" alt="" class="img-fluid">
+              <img src="assets/img/properties/property-1.jpg" href="property-single.html" alt="" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Rent | $1200</span>
                 <h3><a href="property-single.html" class="stretched-link">204 Mount Olive Road Two</a></h3>
