--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img id="logo1" src="assets/img/logo.png" alt=""> 
+        <img id="logo1" src="assets/img/logo1.png" alt=""> 
+        <img id="logo2" src="assets/img/logo2.png" alt=""> 
+
       </a>
 
       <nav id="navmenu" class="navmenu">
