--- a/index.html
+++ b/index.html
@@ -92,34 +92,68 @@
         
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
+          <img src="assets/img/hero-carousel/shubham-residency.png" alt="">
           <div class="carousel-container">
             <div>
-              <p>Doral, Florida</p>
-              <h2><span>204</span> Olive Road Two</h2>
-              <a href="property-single.html" class="btn-get-started">rent | $ 12.000</a>
+              <p>Unnao-Balaji Road, Jhansi</p>
+              <h2><span>Shubham</span> Residency</h2>
+              <a href="property-single.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
+          <img src="assets/img/hero-carousel/ghanaram-mall.jpg" alt="">
           <div class="carousel-container">
             <div>
-              <p>Doral, Florida</p>
-              <h2><span>247</span> Venda Road Five</h2>
-              <a href="property-single2.html" class="btn-get-started">sale | $ 356.000</a>
+              <p>Elite, Jhansi</p>
+              <h2><span>Ghanaram</span> Mall</h2>
+              <a href="property-single2.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
+          <img src="assets/img/hero-carousel/myraa-greens.jpeg" alt="">
           <div class="carousel-container">
             <div>
-              <p>Doral, Florida</p>
-              <h2><span>247</span> Vitra Road three</h2>
-              <a href="property-single.html" class="btn-get-started">rent | $ 3.000</a>
+              <p>Gwalior-Kanpur Bypass, Jhansi</p>
+              <h2><span>Myraa</span> Greens</h2>
+              <a href="property-single.html" class="btn-get-started">Explore More</a>
+            </div>
+          </div>
+        </div><!-- End Carousel Item -->
+
+        <div class="carousel-item">
+          <img src="assets/img/hero-carousel/kunwer-palace.png" alt="">
+          <div class="carousel-container">
+            <div>
+              <p>Elite, Jhansi</p>
+              <h2><span>Hotel</span> Kunwer Palace</h2>
+              <a href="property-single2.html" class="btn-get-started">Explore More</a>
+            </div>
+          </div>
+        </div><!-- End Carousel Item -->
+
+        <div class="carousel-item">
+          <img src="assets/img/hero-carousel/shubham-business-tower.jpeg" alt="">
+          <div class="carousel-container">
+            <div>
+              <p>Sipri, Jhansi</p>
+              <h2><span>Shubham Business</span> Tower</h2>
+              <a href="property-single.html" class="btn-get-started">Explore More</a>
+            </div>
+          </div>
+        </div><!-- End Carousel Item -->
+
+
+        <div class="carousel-item">
+          <img src="assets/img/hero-carousel/vss-the-district.jpg" alt="">
+          <div class="carousel-container">
+            <div>
+              <p>Bhagwantpura, Jhansi</p>
+              <h2><span>VSS,</span> The District</h2>
+              <a href="property-single.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
