Fixed Properties Page

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/vss-the-district.jpg" alt="">
+          <img src="assets/img/hero-carousel/vss-high-street.jpg" alt="">
           <div class="carousel-container">
             <div>
               <p>Bhagwantpura, Jhansi</p>
-              <h2><span>VSS,</span> The District</h2>
+              <h2><span>VSS</span> High-Street</h2>
               <a href="property-single.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
