--- a/projects.html
+++ b/projects.html
@@ -115,12 +115,14 @@
 
         <div class="row gy-4">
 
-          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/properties/property-1.jpg" href="property-single.html" alt="" class="img-fluid">
+              <img src="assets/img/properties/shubham-residency.png" href="property-single.html" alt="" class="img-fluid">
               <div class="card-body">
-                <span class="sale-rent">Rent | $1200</span>
-                <h3><a href="property-single.html" class="stretched-link">204 Mount Olive Road Two</a></h3>
+                <span class="sale-rent">Villa</span>
+                <span class="sale-rent">Sale</span>
+                <span class="sale-rent">Ongoing</span>
+                <h3><a href="property-single.html" class="stretched-link">Shubham Residency</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -139,12 +141,14 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
-              <img src="assets/img/properties/property-2.jpg" alt="" class="img-fluid">
+              <img src="assets/img/properties/ghanaram-mall.jpg" alt="" class="img-fluid">
               <div class="card-body">
-                <span class="sale-rent">Sale | $350.000</span>
-                <h3><a href="property-single2.html" class="stretched-link">647 Molie Road</a></h3>
+                <span class="sale-rent">Commercial</span>
+                <span class="sale-rent">Rent</span>
+                <span class="sale-rent">Ongoing</span>
+                <h3><a href="property-single2.html" class="stretched-link">Ghanaram Mall</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -163,12 +167,14 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/properties/property-3.jpg" alt="" class="img-fluid">
+              <img src="assets/img/properties/myraa-greens.jpeg" alt="" class="img-fluid">
               <div class="card-body">
-                <span class="sale-rent">Sale | $580.000</span>
-                <h3><a href="property-single.html" class="stretched-link">711 Avenue Road</a></h3>
+                <span class="sale-rent">Villa</span>
+                <span class="sale-rent">Sale</span>
+                <span class="sale-rent">Ongoing</span>
+                <h3><a href="property-single.html" class="stretched-link">Myraa Greens</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -187,12 +193,13 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="400">
             <div class="card">
-              <img src="assets/img/properties/property-4.jpg" alt="" class="img-fluid">
+              <img src="assets/img/properties/kunwer-palace.png" alt="" class="img-fluid">
               <div class="card-body">
-                <span class="sale-rent">Rent | $6500</span>
-                <h3><a href="property-single2.html" class="stretched-link">117 Milk Road</a></h3>
+                <span class="sale-rent">Hospitality</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single2.html" class="stretched-link">Kunwer Palace</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -211,12 +218,15 @@
             </div>
           </div><!-- End Property Item -->
 
-          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="500">
             <div class="card">
-              <img src="assets/img/properties/property-5.jpg" alt="" class="img-fluid">
+              <img src="assets/img/properties/shubham-business-tower.jpeg" alt="" class="img-fluid">
               <div class="card-body">
-                <span class="sale-rent">Rent | $3000</span>
-                <h3><a href="property-single.html" class="stretched-link">678 Broad Road</a></h3>
+                <span class="sale-rent">Commercial</span>
+                <span class="sale-rent">Chambers</span>
+                <span class="sale-rent">Rent</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single.html" class="stretched-link">Shubham Business Tower</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -237,10 +247,191 @@
 
           <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="600">
             <div class="card">
-              <img src="assets/img/properties/property-6.jpg" alt="" class="img-fluid">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
               <div class="card-body">
-                <span class="sale-rent">Sale | $650.000</span>
-                <h3><a href="property-single2.html" class="stretched-link">974 Denim Road</a></h3>
+                <span class="sale-rent">Commercial Hub</span>
+                <span class="sale-rent">Rent/Sale</span>
+                <span class="sale-rent">Ongoing</span>
+                <h3><a href="property-single2.html" class="stretched-link">VSS High-Street</a></h3>
+                <div class="card-content d-flex flex-column justify-content-center text-center">
+                  <div class="row propery-info">
+                    <div class="col">Area</div>
+                    <div class="col">Beds</div>
+                    <div class="col">Baths</div>
+                    <div class="col">Garages</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">340m2</div>
+                    <div class="col">5</div>
+                    <div class="col">2</div>
+                    <div class="col">1</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Property Item -->
+
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <span class="sale-rent">Villa/Plot</span>
+                <span class="sale-rent">Sale</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single2.html" class="stretched-link">Suncity Colony</a></h3>
+                <div class="card-content d-flex flex-column justify-content-center text-center">
+                  <div class="row propery-info">
+                    <div class="col">Area</div>
+                    <div class="col">Beds</div>
+                    <div class="col">Baths</div>
+                    <div class="col">Garages</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">340m2</div>
+                    <div class="col">5</div>
+                    <div class="col">2</div>
+                    <div class="col">1</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Property Item -->
+
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <span class="sale-rent">Villa</span>
+                <span class="sale-rent">Joint Venture</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single2.html" class="stretched-link">Eldeco County</a></h3>
+                <div class="card-content d-flex flex-column justify-content-center text-center">
+                  <div class="row propery-info">
+                    <div class="col">Area</div>
+                    <div class="col">Beds</div>
+                    <div class="col">Baths</div>
+                    <div class="col">Garages</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">340m2</div>
+                    <div class="col">5</div>
+                    <div class="col">2</div>
+                    <div class="col">1</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Property Item -->
+
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <span class="sale-rent">Education</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single2.html" class="stretched-link">Red Rose Public School</a></h3>
+                <div class="card-content d-flex flex-column justify-content-center text-center">
+                  <div class="row propery-info">
+                    <div class="col">Area</div>
+                    <div class="col">Beds</div>
+                    <div class="col">Baths</div>
+                    <div class="col">Garages</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">340m2</div>
+                    <div class="col">5</div>
+                    <div class="col">2</div>
+                    <div class="col">1</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Property Item -->
+
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <span class="sale-rent">Education</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single2.html" class="stretched-link">SMS International Public School</a></h3>
+                <div class="card-content d-flex flex-column justify-content-center text-center">
+                  <div class="row propery-info">
+                    <div class="col">Area</div>
+                    <div class="col">Beds</div>
+                    <div class="col">Baths</div>
+                    <div class="col">Garages</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">340m2</div>
+                    <div class="col">5</div>
+                    <div class="col">2</div>
+                    <div class="col">1</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Property Item -->
+          
+          <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <span class="sale-rent">Manufacturing</span>
+                <span class="sale-rent">Ongoing</span>
+                <h3><a href="property-single2.html" class="stretched-link">Impressa Safety Glass & UPVC</a></h3>
+                <div class="card-content d-flex flex-column justify-content-center text-center">
+                  <div class="row propery-info">
+                    <div class="col">Area</div>
+                    <div class="col">Beds</div>
+                    <div class="col">Baths</div>
+                    <div class="col">Garages</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">340m2</div>
+                    <div class="col">5</div>
+                    <div class="col">2</div>
+                    <div class="col">1</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Property Item -->
+
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <span class="sale-rent">Villa/Plot</span>
+                <span class="sale-rent">Joint Venture</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single2.html" class="stretched-link">Ansal Basera Colony</a></h3>
+                <div class="card-content d-flex flex-column justify-content-center text-center">
+                  <div class="row propery-info">
+                    <div class="col">Area</div>
+                    <div class="col">Beds</div>
+                    <div class="col">Baths</div>
+                    <div class="col">Garages</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">340m2</div>
+                    <div class="col">5</div>
+                    <div class="col">2</div>
+                    <div class="col">1</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Property Item -->
+
+          <div class="col-xl-4 col-md-6" data-category="completed" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <span class="sale-rent">Sports & Recreation</span>
+                <span class="sale-rent">Box Cricket/Football</span>
+                <span class="sale-rent">Completed</span>
+                <h3><a href="property-single2.html" class="stretched-link">Pocket Pitch Turf</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
