--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,11 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Projects</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p class="mb-0">
+                <i>
+                  Discover spaces that inspire. From elegant residences to dynamic commercial hubs, our projects bring innovation, style, and comfort to life, creating environments where modern living meets thoughtful design.
+                </i>
+              </p>
             </div>
           </div>
         </div>
