Created every property separate Pages

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
           </li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="faq.html">FAQ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -96,7 +97,7 @@
             <div>
               <p>Unnao-Balaji Road, Jhansi</p>
               <h2><span>Shubham</span> Residency</h2>
-              <a href="property-single.html" class="btn-get-started">Explore More</a>
+              <a href="properties/shubham-residency.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -107,7 +108,7 @@
             <div>
               <p>Elite, Jhansi</p>
               <h2><span>Ghanaram</span> Mall</h2>
-              <a href="property-single2.html" class="btn-get-started">Explore More</a>
+              <a href="properties/ghanaram-mall.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -118,7 +119,7 @@
             <div>
               <p>Gwalior-Kanpur Bypass, Jhansi</p>
               <h2><span>Myraa</span> Greens</h2>
-              <a href="property-single.html" class="btn-get-started">Explore More</a>
+              <a href="properties/myraa-greens.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -129,7 +130,7 @@
             <div>
               <p>Elite, Jhansi</p>
               <h2><span>Hotel</span> Kunwer Palace</h2>
-              <a href="property-single2.html" class="btn-get-started">Explore More</a>
+              <a href="properties/kunwer-palace.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -140,7 +141,7 @@
             <div>
               <p>Sipri, Jhansi</p>
               <h2><span>Shubham Business</span> Tower</h2>
-              <a href="property-single.html" class="btn-get-started">Explore More</a>
+              <a href="properties/shubham-business-tower.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -152,7 +153,7 @@
             <div>
               <p>Bhagwantpura, Jhansi</p>
               <h2><span>VSS</span> High-Street</h2>
-              <a href="property-single.html" class="btn-get-started">Explore More</a>
+              <a href="properties/vss-high-street.html" class="btn-get-started">Explore More</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
