--- a/about.html
+++ b/about.html
@@ -75,6 +75,7 @@
           </li>
           <li><a href="about.html" class="active">About</a></li>
           <li><a href="contact.html" >Contact</a></li>
+          <li><a href="faq.html">FAQ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
