--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,7 @@
           </li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="faq.html">FAQ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -125,7 +126,7 @@
                 <span class="sale-rent">Villa</span>
                 <span class="sale-rent">Sale</span>
                 <span class="sale-rent">Ongoing</span>
-                <h3><a href="property-single.html" class="stretched-link">Shubham Residency</a></h3>
+                <h3><a href="properties/shubham-residency.html" class="stretched-link">Shubham Residency</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -151,7 +152,7 @@
                 <span class="sale-rent">Commercial</span>
                 <span class="sale-rent">Rent</span>
                 <span class="sale-rent">Ongoing</span>
-                <h3><a href="property-single2.html" class="stretched-link">Ghanaram Mall</a></h3>
+                <h3><a href="properties/ghanaram-mall.html" class="stretched-link">Ghanaram Mall</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -177,7 +178,7 @@
                 <span class="sale-rent">Villa</span>
                 <span class="sale-rent">Sale</span>
                 <span class="sale-rent">Ongoing</span>
-                <h3><a href="property-single.html" class="stretched-link">Myraa Greens</a></h3>
+                <h3><a href="properties/myraa-greens.html" class="stretched-link">Myraa Greens</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -202,7 +203,7 @@
               <div class="card-body">
                 <span class="sale-rent">Hospitality</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single2.html" class="stretched-link">Kunwer Palace</a></h3>
+                <h3><a href="properties/kunwer-palace.html" class="stretched-link">Kunwer Palace</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -229,7 +230,7 @@
                 <span class="sale-rent">Chambers</span>
                 <span class="sale-rent">Rent</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single.html" class="stretched-link">Shubham Business Tower</a></h3>
+                <h3><a href="properties/shubham-business-tower.html" class="stretched-link">Shubham Business Tower</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -255,7 +256,7 @@
                 <span class="sale-rent">Commercial Hub</span>
                 <span class="sale-rent">Rent/Sale</span>
                 <span class="sale-rent">Ongoing</span>
-                <h3><a href="property-single2.html" class="stretched-link">VSS High-Street</a></h3>
+                <h3><a href="properties/vss-high-street.html" class="stretched-link">VSS High-Street</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -281,7 +282,7 @@
                 <span class="sale-rent">Villa/Plot</span>
                 <span class="sale-rent">Sale</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single2.html" class="stretched-link">Suncity Colony</a></h3>
+                <h3><a href="properties/suncity.html" class="stretched-link">Suncity Colony</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -307,7 +308,7 @@
                 <span class="sale-rent">Villa</span>
                 <span class="sale-rent">Joint Venture</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single2.html" class="stretched-link">Eldeco County</a></h3>
+                <h3><a href="properties/eldeco-county.html" class="stretched-link">Eldeco County</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -332,7 +333,7 @@
               <div class="card-body">
                 <span class="sale-rent">Education</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single2.html" class="stretched-link">Red Rose Public School</a></h3>
+                <h3><a href="properties/red-rose.html" class="stretched-link">Red Rose Public School</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -357,7 +358,7 @@
               <div class="card-body">
                 <span class="sale-rent">Education</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single2.html" class="stretched-link">SMS International Public School</a></h3>
+                <h3><a href="properties/sms.html" class="stretched-link">SMS International Public School</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -382,7 +383,7 @@
               <div class="card-body">
                 <span class="sale-rent">Manufacturing</span>
                 <span class="sale-rent">Ongoing</span>
-                <h3><a href="property-single2.html" class="stretched-link">Impressa Safety Glass & UPVC</a></h3>
+                <h3><a href="properties/impressa.html" class="stretched-link">Impressa Safety Glass & UPVC</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -408,7 +409,7 @@
                 <span class="sale-rent">Villa/Plot</span>
                 <span class="sale-rent">Joint Venture</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single2.html" class="stretched-link">Ansal Basera Colony</a></h3>
+                <h3><a href="properties/ansal-basera.html" class="stretched-link">Ansal Basera Colony</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -434,7 +435,7 @@
                 <span class="sale-rent">Sports & Recreation</span>
                 <span class="sale-rent">Box Cricket/Football</span>
                 <span class="sale-rent">Completed</span>
-                <h3><a href="property-single2.html" class="stretched-link">Pocket Pitch Turf</a></h3>
+                <h3><a href="properties/pocket-pitch.html" class="stretched-link">Pocket Pitch Turf</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
