Created FAQ Page

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Our Services</h2>
         <p>
-          <i>From land to lifestyle — we deliver secure, well-planned real estate and hospitality services designed for growth, comfort, and peace of mind.</i>
+          From land to lifestyle — we deliver secure, well-planned real estate and hospitality services designed for growth, comfort, and peace of mind.
         </p>
       </div><!-- End Section Title -->
 
@@ -334,7 +334,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Our Journey</h2>
         <p>
-          <i>From humble beginnings to trusted name — our journey reflects growth, trust, and a commitment to lasting relationships.</i>
+          From humble beginnings to trusted name — our journey reflects growth, trust, and a commitment to lasting relationships.
         </p>
       </div>
 
