Fixed FAQ Links

--- a/faq.html
+++ b/faq.html
@@ -183,7 +183,11 @@
             </h2>
             <div id="faqAccountCollapse5" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading5" data-bs-parent="#faqAccount">
               <div class="accordion-body">
-                <p>Visit the official JDA website or office to verify project details. You can request the builder for the JDA approval letter and sanctioned building plan before investing.</p>
+                <p>
+                  Visit the official JDA website 
+                  (<a href="https://jdaup.in" target="_blank" rel="noopener noreferrer">www.jdaup.in</a>) 
+                  or office to verify project details. You can request the builder for the JDA approval letter and sanctioned building plan before investing.
+                </p>
               </div>
             </div>
                 </div>
@@ -228,7 +232,9 @@
             <div id="faqAccountCollapse8" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading8" data-bs-parent="#faqAccount">
               <div class="accordion-body">
                 <p>
-                  You can search for the project on the Uttar Pradesh RERA website (www.up-rera.in). All new residential and commercial projects with more than 8 units or 500 sq.m. of land must be registered with RERA.
+                  You can search for the project on the Uttar Pradesh RERA website 
+                  (<a href="https://www.up-rera.in" target="_blank" rel="noopener noreferrer">www.up-rera.in</a>). 
+                  All new residential and commercial projects with more than 8 units or 500 sq.m. of land must be registered with RERA.
                 </p>
               </div>
             </div>
