Fixed Project tags

--- a/projects.html
+++ b/projects.html
@@ -106,6 +106,7 @@
               <img src="assets/img/properties/shubham-residency.png" alt="Shubham Residency" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Villa</span>
+                <span class="sale-rent">4 BHK</span>
                 <span class="sale-rent">Sale</span>
                 <span class="sale-rent">Ongoing</span>
                 <h3>Shubham Residency</h3>
@@ -123,6 +124,8 @@
               <div class="card-body">
                 <span class="sale-rent">Commercial</span>
                 <span class="sale-rent">Rent</span>
+                <span class="sale-rent">Multiplex</span>
+                <span class="sale-rent">Food Court</span>
                 <span class="sale-rent">Ongoing</span>
                 <h3>Ghanaram Mall</h3>
               </div>
@@ -136,6 +139,7 @@
               <img src="assets/img/properties/myraa-greens.jpeg" alt="Myraa Greens" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Villa</span>
+                <span class="sale-rent">4/5 BHK</span>
                 <span class="sale-rent">Sale</span>
                 <span class="sale-rent">Ongoing</span>
                 <h3>Myraa Greens</h3>
@@ -150,6 +154,7 @@
               <img src="assets/img/properties/kunwer-palace.png" alt="Kunwer Palace" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Hospitality</span>
+                <span class="sale-rent">Banquet Hall</span>
                 <span class="sale-rent">Completed</span>
                 <h3>Kunwer Palace</h3>
               </div>
@@ -244,11 +249,14 @@
           <div class="col-xl-4 col-md-6" data-category="ongoing" data-aos="fade-up" data-aos-delay="200">
             <a href="properties/impressa.html" class="text-decoration-none">
             <div class="card">
-              <img src="assets/img/properties/vss-high-street.jpg" alt="Impressa Safety Glass & UPVC" class="img-fluid">
+              <img src="assets/img/properties/vss-high-street.jpg" alt="Impressa Safety Glass" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Manufacturing</span>
+                <span class="sale-rent">Toughened Glass</span>
+                <span class="sale-rent">UPVC</span>
+                <span class="sale-rent">Furniture</span>
                 <span class="sale-rent">Ongoing</span>
-                <h3>Impressa Safety Glass & UPVC</h3>
+                <h3>Impressa Safety Glass</h3>
               </div>
             </div>
           </a>
