--- a/properties/red-rose.html
+++ b/properties/red-rose.html
@@ -75,19 +75,13 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Red Rose Public School</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p class="mb-0">
+                A trusted institution of excellence that blends strong academics with value-based learning, nurturing young minds through a balanced focus on studies, extracurriculars, and holistic growth.
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <nav class="breadcrumbs">
-        <div class="container">
-          <ol>
-            <li><a href="../index.html">Home</a></li>
-            <li class="current">Red Rose Public School</li>
-          </ol>
-        </div>
-      </nav>
     </div><!-- End Page Title -->
 
     <!-- Real Estate 2 Section -->
@@ -140,64 +134,39 @@
           <div class="col-lg-8" data-aos="fade-up">
 
             <div class="portfolio-description">
-              <h2>This is an example of propery details</h2>
+              <h2>Experience Luxury Without Compromise</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Red Rose Public School is one of the oldest and most reputed educational institutions in Jhansi, known for its strong academic standards and value-based learning. Affiliated with the Central Board of Secondary Education (CBSE), the school offers education up to Class 8th, ensuring a balanced approach to academics and extracurricular activities.
               </p>
               <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                Located at the heart of Jhansi, the school is easily accessible and continues to be a trusted choice for parents who seek quality education in a central location. With decades of excellence and a commitment to holistic development, Red Rose Public School shapes young minds for a brighter future.
               </p>
+              </div><!-- End Portfolio Description -->
 
-              <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-              </p>
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-              </p>
-
-              <div class="testimonial-item">
-                <p>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                </p>
-                <div>
-                  <img src="../assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Agent</h4>
-                </div>
+            <div class="portfolio-description">
+              <h2>Our Socials</h2>
+              <div class="social-links d-flex">
+                <a href="https://www.instagram.com/redrosepublicschool_civillines?igsh=OXNlNXpva200NnB3" class="instagram"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/share/1BDoEXRPzH/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
               </div>
             </div><!-- End Portfolio Description -->
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1">Video</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2">Floor Plans</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab3">Location</a></li>
+              <li><a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1">Floor Plans</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2">Location</a></li>
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
             <div class="tab-content">
 
               <div class="tab-pane fade show active" id="real-estate-2-tab1">
-				  
-				 <iframe style="border:0; width: 100%; height: 400px;" 
-            		src="https://www.youtube.com/embed/S4MV0RHe-Pw?si=JcGayuZefhjB-DH2" 
-            		frameborder="0" 
-            		loading="lazy" allow="accelerometer; autoplay; clipboard-write; 
-            		encrypted-media; gyroscope; picture-in-picture; web-share" 
-            		referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-   				 </iframe>
-
+				        <img style="width: 100%; height: 400px;" src="../assets/img/floor-plan.jpg" alt="" class="img-fluid">
               </div><!-- End Tab 1 Content -->
 
               <div class="tab-pane fade" id="real-estate-2-tab2">
-                <img src="../assets/img/floor-plan.jpg" alt="" class="img-fluid">
+                <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14411.505775463207!2d78.5514841871582!3d25.442393999999993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397777e7cd208c95%3A0xb00ae632df0ad854!2sRed%20Rose%20Public%20School%2C%20Civil%20lines%2C%20Jhansi!5e0!3m2!1sen!2sin!4v1755976312520!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
-
-              <div class="tab-pane fade" id="real-estate-2-tab3">
-                <iframe style="border:0; width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.737381825663!2d78.56641797620861!3d25.44704207755096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3977772ba065dd1b%3A0x6c8d32e1a6872205!2sVSS%20HOUSING%20GROUP!5e0!3m2!1sen!2sin!4v1750925609604!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div><!-- End Tab 3 Content -->
-
             </div><!-- End Tab Content -->
 
           </div>
@@ -206,13 +175,16 @@
             <div class="portfolio-info">
               <h3>Quick Summary</h3>
               <ul>
-                <li><strong>Property ID:</strong> 1134n</li>
-                <li><strong>Location:</strong> Chicago, IL 606543</li>
-                <li><strong>Property Type:</strong> House</li>
-                <li><strong>Status:</strong> Sale</li>
-                <li><strong>Area:</strong> <span>340m <sup>2</sup></span></li>
-                <li><strong>Beds:</strong> 4</li>
-                <li><strong>Baths:</strong> 1</li>
+                <li><strong>Type:</strong> Duplex Villas</li>
+                <li><strong>Total Land Area:</strong> 1.26 Acres</li>
+                <li><strong>Total Units:</strong> 22</li>
+                <li><strong>Villa Type:</strong> 4 BHK</li>
+                <li><strong>Construction Area:</strong> 32000 Sq.ft.</li>
+                <li><strong>RERA No:</strong> UPRERAPRJ718409</li>
+                <li><strong>JDA Approved:</strong> Yes</li>
+                <li><strong>Multilayer Security:</strong> Yes</li>
+                <li><strong>Earthquake Resistant:</strong> Yes</li>
+                <li><strong>Easy Connectivity:</strong> Kanpur-Gwalior bypass</li>
               </ul>
             </div>
           </div>
