Fixed every page and removed schools

--- a/properties/kunwer-palace.html
+++ b/properties/kunwer-palace.html
@@ -76,7 +76,7 @@
             <div class="col-lg-8">
               <h1>Hotel Kunwer Palace</h1>
               <p class="mb-0">
-                Offers you ultra-modern yet gracious luxury homes, nestled in the lap of nature and neighboring staggered development.
+                Experience warm hospitality, modern comforts, and a perfect setting for stays and celebrations in the heart of Jhansi.
               </p>
             </div>
           </div>
@@ -134,18 +134,12 @@
           <div class="col-lg-8" data-aos="fade-up">
 
             <div class="portfolio-description">
-              <h2>Experience Luxury Without Compromise</h2>
+              <h2>Hospitality with Elegance</h2>
               <p>
-                Why settle for shrinking apartment sizes when true luxury is about grandeur, space, and elegance? At Hotel Kunwer Palace, every home is designed to feel expansive and extraordinary — with soaring ceilings, spacious layouts, and the finest finishes that reflect sophistication at every corner.
+                Hotel Kunwer Palace is a centrally located destination that blends warm hospitality with modern amenities. With 20+ well-furnished rooms, it offers a comfortable stay for business travelers, families, and tourists alike.
               </p>
               <p>
-                Surrounded by lush greenery and serene landscapes, our residences offer more than just comfort — they bring you peace of mind and well-being. Take a refreshing morning stroll through beautifully landscaped gardens and experience the perfect blend of luxury and nature.
-              </p>
-              <p>
-                Beyond the walls of your home lies an environment created for well-being and peace of mind. Surrounded by lush greenery and calm open spaces, Hotel Kunwer Palace offers you the rare chance to live in harmony with nature without giving up the convenience of city life.
-              </p>
-              <p>
-                Luxury here is not only about fine interiors, but also about the lifestyle that comes with it. A home at Hotel Kunwer Palace gives you the balance of modern comfort and natural beauty — a place where your family can grow, your mind can unwind, and every day feels like a step closer to the life you’ve always imagined.
+                The hotel also features a spacious banquet hall, making it a preferred choice for weddings, events, and gatherings. Known for its welcoming service and attention to detail, Hotel Kunwer Palace has earned the love and trust of its customers, becoming a landmark stay in Jhansi.
               </p>
             </div><!-- End Portfolio Description -->
 
