--- a/properties/myraa-greens.html
+++ b/properties/myraa-greens.html
@@ -220,7 +220,7 @@
             <h4>Contact</h4>
             <p>
               <strong>Phone:</strong> <span>+91-9935531136</span><br>
-              <strong>Email:</strong> <span>vsshousinggroup@yahoo.com</span><br>
+              <strong>Email:</strong> <span>info@vsshousing.in</span><br>
             </p>
           </div>
         </div>
