Fixed Footer margin top

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
   </main>
 
-  <footer id="footer" class="footer light-background">
+  <footer id="footer" class="footer light-background" style="margin-top: 60px;">
 
     <div class="container">
       <div class="row gy-3">
