Added Canonical Tag

--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>FAQ - EstateAgency Bootstrap Template</title>
+
+  <!-- Add canonical tag -->
+  <link rel="canonical" href="https://vsshousing.in/faq" />
+
   <meta name="description" content="">
   <meta name="keywords" content="">
 
