--- a/properties/impressa.html
+++ b/properties/impressa.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Impressa Glass & UPVC - VSS Housing (P) Ltd.</title>
+
+  <!-- Add canonical tag -->
+  <link rel="canonical" href="https://vsshousing.in/properties/impressa" />
+  
   <meta name="description" content="">
   <meta name="keywords" content="">
 
