--- a/properties/myraa-greens.html
+++ b/properties/myraa-greens.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Myraa Greens - VSS Housing (P) Ltd.</title>
+
+  <!-- Add canonical tag -->
+  <link rel="canonical" href="https://vsshousing.in/properties/myraa-greens" />
+
   <meta name="description" content="">
   <meta name="keywords" content="">
 
