--- a/properties/pocket-pitch.html
+++ b/properties/pocket-pitch.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Pocket Pitch Turf - VSS Housing (P) Ltd.</title>
+  
+  <!-- Add canonical tag -->
+  <link rel="canonical" href="https://vsshousing.in/properties/pocket-pitch" />
+
   <meta name="description" content="">
   <meta name="keywords" content="">
 
