--- a/properties/vss-high-street.html
+++ b/properties/vss-high-street.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>VSS High-Street - VSS Housing (P) Ltd.</title>
+
+  <!-- Add canonical tag -->
+  <link rel="canonical" href="https://vsshousing.in/properties/vss-high-street" />
+
   <meta name="description" content="">
   <meta name="keywords" content="">
 
