Fixed Location Tab

--- a/properties/eldeco-county.html
+++ b/properties/eldeco-county.html
@@ -153,27 +153,25 @@
               </p>
             </div><!-- End Portfolio Description -->
 
-            <div class="portfolio-description">
-              <h2>Our Socials</h2>
-              <div class="social-links d-flex">
-                <a href="https://eldecogroup.com/projects/residential/uttar-pradesh/jhansi/completed/eldeco-county/overview" class="web"><i class="bi bi-globe"></i></a>
-              </div>
-            </div><!-- End Portfolio Description -->
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Our Socials</h3>
 
-            <!-- Tabs -->
-            <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1">Floor Plans</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2">Location</a></li>
-            </ul><!-- End Tabs -->
+                <div class="social-links d-flex">
+                    <a href="https://eldecogroup.com/projects/residential/uttar-pradesh/jhansi/completed/eldeco-county/overview" class="web"><i class="bi bi-globe"></i></a>
+                </div>
+              </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Location</h3>
+            </div>
+          </div>
 
             <!-- Tab Content -->
             <div class="tab-content">
-
-              <div class="tab-pane fade show active" id="real-estate-2-tab1">
-				        <img style="width: 100%; height: 400px;" src="../assets/img/floor-plan.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab 1 Content -->
-
-              <div class="tab-pane fade" id="real-estate-2-tab2">
+              <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57669.40508581989!2d78.48286174863286!3d25.39350029999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39777b15137ea80b%3A0xa69602979cc97a9d!2sEldeco%20County!5e0!3m2!1sen!2sus!4v1755973592912!5m2!1sen!2sus" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
             </div><!-- End Tab Content -->
