--- a/properties/impressa.html
+++ b/properties/impressa.html
@@ -150,20 +150,15 @@
               </p>
             </div><!-- End Portfolio Description -->
 
-            <!-- Tabs -->
-            <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1">Floor Plans</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2">Location</a></li>
-            </ul><!-- End Tabs -->
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Location</h3>
+            </div>
+          </div>
 
             <!-- Tab Content -->
             <div class="tab-content">
-
-              <div class="tab-pane fade show active" id="real-estate-2-tab1">
-				        <img style="width: 100%; height: 400px;" src="../assets/img/floor-plan.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab 1 Content -->
-
-              <div class="tab-pane fade" id="real-estate-2-tab2">
+              <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3603.6019017195963!2d78.64420527538897!3d25.418133077569404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDI1JzA1LjMiTiA3OMKwMzgnNDguNCJF!5e0!3m2!1sen!2sin!4v1757789090336!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
             </div><!-- End Tab Content -->
