--- a/properties/pocket-pitch.html
+++ b/properties/pocket-pitch.html
@@ -152,28 +152,26 @@
                 Whether it’s cricket, football, or just an energetic gathering with friends, Pocket Pitch Turf brings world-class facilities right into the heart of Jhansi.
               </p>
             </div><!-- End Portfolio Description -->
+          
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Our Socials</h3>
 
-            <div class="portfolio-description">
-              <h2>Our Socials</h2>
               <div class="social-links d-flex">
                 <a href="https://www.instagram.com/pocket.pitch?igsh=MWxydTVmNjN3dDM2cA==" class="instagram"><i class="bi bi-instagram"></i></a>
               </div>
-            </div><!-- End Portfolio Description -->
+              </div>
+          </div>
 
-            <!-- Tabs -->
-            <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1">Floor Plans</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2">Location</a></li>
-            </ul><!-- End Tabs -->
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Location</h3>
+            </div>
+          </div>
 
             <!-- Tab Content -->
             <div class="tab-content">
-
-              <div class="tab-pane fade show active" id="real-estate-2-tab1">
-				        <img style="width: 100%; height: 400px;" src="../assets/img/floor-plan.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab 1 Content -->
-
-              <div class="tab-pane fade" id="real-estate-2-tab2">
+              <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.687750121549!2d78.5723854!3d25.4487008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39777700066588f9%3A0xcc0e3754ec199717!2sPocket%20Pitch%20Turf!5e0!3m2!1sen!2sin!4v1757789546601!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
             </div><!-- End Tab Content -->
