--- a/properties/shubham-residency.html
+++ b/properties/shubham-residency.html
@@ -152,30 +152,28 @@
                 Luxury here is not only about fine interiors, but also about the lifestyle that comes with it. A home at Shubham Residency gives you the balance of modern comfort and natural beauty — a place where your family can grow, your mind can unwind, and every day feels like a step closer to the life you’ve always imagined.
               </p>
             </div><!-- End Portfolio Description -->
+          
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Our Socials</h3>
 
-            <div class="portfolio-description">
-              <h2>Our Socials</h2>
               <div class="social-links d-flex">
                 <a href="https://shubhamresidency.com/" class="web"><i class="bi bi-globe"></i></a>
                 <a href="https://www.instagram.com/shubhamresidency_jhansi?igsh=YWZpdTMzMHFrNWYy" class="instagram"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.facebook.com/share/1JCxxeBQsf/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
               </div>
-            </div><!-- End Portfolio Description -->
+              </div>
+          </div>
 
-            <!-- Tabs -->
-            <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1">Floor Plans</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2">Location</a></li>
-            </ul><!-- End Tabs -->
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Location</h3>
+            </div>
+          </div>
 
             <!-- Tab Content -->
             <div class="tab-content">
-
-              <div class="tab-pane fade show active" id="real-estate-2-tab1">
-				        <img style="width: 100%; height: 400px;" src="../assets/img/floor-plan.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab 1 Content -->
-
-              <div class="tab-pane fade" id="real-estate-2-tab2">
+              <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.0072308577037!2d78.57457437539185!3d25.50480537751419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397775007c2cad59%3A0x23e82e8a2366afa!2sShubham%20Residency!5e0!3m2!1sen!2sin!4v1755970830156!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
             </div><!-- End Tab Content -->
