Fixed fade-up delay in map

--- a/properties/kunwer-palace.html
+++ b/properties/kunwer-palace.html
@@ -154,7 +154,7 @@
           </div>
 
             <!-- Tab Content -->
-            <div class="tab-content">
+            <div class="tab-content" data-aos="fade-up" data-aos-delay="100">
               <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.7367923869756!2d78.56622057620862!3d25.44706177755097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3977772b0a44395d%3A0x15e54a37bec499f!2sCapital%20O%2048812%20Kunwer%20Palace!5e0!3m2!1sen!2sin!4v1763054998601!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
