--- a/properties/ansal-basera.html
+++ b/properties/ansal-basera.html
@@ -167,7 +167,7 @@
           </div>
 
             <!-- Tab Content -->
-            <div class="tab-content">
+            <div class="tab-content" data-aos="fade-up" data-aos-delay="100">
               <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.7146036642343!2d78.562933!3d25.4812036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397771eb98b12a2b%3A0xcd20c561ab74dccc!2sAnsal%20Basera%20Estate%20Jhansi!5e0!3m2!1sen!2sin!4v1757789321141!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
