--- a/properties/eldeco-county.html
+++ b/properties/eldeco-county.html
@@ -170,7 +170,7 @@
           </div>
 
             <!-- Tab Content -->
-            <div class="tab-content">
+            <div class="tab-content" data-aos="fade-up" data-aos-delay="100">
               <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57669.40508581989!2d78.48286174863286!3d25.39350029999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39777b15137ea80b%3A0xa69602979cc97a9d!2sEldeco%20County!5e0!3m2!1sen!2sus!4v1755973592912!5m2!1sen!2sus" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
