--- a/properties/myraa-greens.html
+++ b/properties/myraa-greens.html
@@ -165,7 +165,7 @@
           </div>
 
             <!-- Tab Content -->
-            <div class="tab-content">
+            <div class="tab-content" data-aos="fade-up" data-aos-delay="100">
               <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3601.1644074917804!2d78.56763927539178!3d25.4995628775175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDI5JzU4LjQiTiA3OMKwMzQnMTIuOCJF!5e0!3m2!1sen!2sin!4v1755975154785!5m2!1sen!2sin"  frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
