--- a/properties/shubham-residency.html
+++ b/properties/shubham-residency.html
@@ -172,7 +172,7 @@
           </div>
 
             <!-- Tab Content -->
-            <div class="tab-content">
+            <div class="tab-content" data-aos="fade-up" data-aos-delay="100">
               <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.0072308577037!2d78.57457437539185!3d25.50480537751419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397775007c2cad59%3A0x23e82e8a2366afa!2sShubham%20Residency!5e0!3m2!1sen!2sin!4v1755970830156!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
